erDiagram
    BOOKING {
        uuid id PK
        uuid user_id FK
        uuid practice_id FK
        uuid payment_id FK
        enum status
        timestamp booked_at
        timestamp cancelled_at
        string cancellation_reason
        boolean attended
        jsonb metadata
    }
    
    WAITLIST {
        uuid id PK
        uuid user_id FK
        uuid practice_id FK
        int position
        timestamp joined_at
        enum status
    }
    
    USER ||--o{ BOOKING : makes
    PRACTICE ||--o{ BOOKING : has
    PRACTICE ||--o{ WAITLIST : has
